[gd_scene load_steps=7 format=3 uid="uid://brdii2oj2mghv"]

[ext_resource type="Script" uid="uid://cjty8q3215q40" path="res://UI/UIManager.gd" id="1_yi00g"]
[ext_resource type="Texture2D" uid="uid://cwb8sgjjrbhe" path="res://UI/tank_bullet3.png" id="2_cebxl"]
[ext_resource type="Theme" uid="uid://d3x37jaeai1v2" path="res://UI/base_theme.tres" id="3_c5rlx"]
[ext_resource type="Texture2D" uid="uid://d2ha25y4xvr6f" path="res://UI/tank_arrowFull.png" id="3_vua0w"]
[ext_resource type="Texture2D" uid="uid://dyva1cx310f3k" path="res://UI/tank_bulletFly4.png" id="4_g5sxs"]
[ext_resource type="Texture2D" uid="uid://cmrtm24gb374w" path="res://UI/progress-bar-circle.png" id="5_svryg"]

[node name="UIManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi00g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ObjectiveVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_top = 119.0
offset_right = -23.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2

[node name="ObjectiveBackground" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1756, 76)
scale = Vector2(2.10989, 1.625)
texture = ExtResource("3_vua0w")

[node name="ObjectivesLabel" type="Label" parent="CanvasLayer"]
offset_left = 1684.0
offset_top = 67.0
offset_right = 1918.0
offset_bottom = 112.0
theme = ExtResource("3_c5rlx")
theme_override_font_sizes/font_size = 28
text = "Objectives"

[node name="ShellReloadProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 60.0
offset_top = 67.0
offset_right = 188.0
offset_bottom = 195.0
fill_mode = 4
texture_under = ExtResource("5_svryg")
texture_progress = ExtResource("5_svryg")
tint_under = Color(0.243137, 0.243137, 0.243137, 0.647059)
tint_progress = Color(0.719454, 2.55093e-06, 5.77569e-07, 1)

[node name="ShellBackground" type="TextureRect" parent="CanvasLayer"]
offset_left = 74.0
offset_top = 100.0
offset_right = 171.0
offset_bottom = 158.0
texture = ExtResource("2_cebxl")

[node name="ShellsLabel" type="Label" parent="CanvasLayer"]
offset_left = 94.0
offset_top = 109.0
offset_right = 144.0
offset_bottom = 154.0
size_flags_horizontal = 4
theme = ExtResource("3_c5rlx")
theme_override_font_sizes/font_size = 32
text = " x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AirstrikeBackground" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.473976, 0.473976, 0.473976, 1)
position = Vector2(121.75, 239)
scale = Vector2(1.66111, 2.46154)
texture = ExtResource("4_g5sxs")

[node name="AirShellsLabel" type="Label" parent="CanvasLayer"]
modulate = Color(0.454524, 0.454524, 0.454524, 1)
offset_left = 131.0
offset_top = 219.0
offset_right = 176.0
offset_bottom = 264.0
theme = ExtResource("3_c5rlx")
theme_override_font_sizes/font_size = 32
text = " x"
horizontal_alignment = 1
vertical_alignment = 1
